apps/clubs/saveursdegenie/website/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: saveursdegenie
spec:
  virtualhost:
    fqdn: saveursdegenie.etsmtl.ca
    tls:
      secretName: saveursdegenie-cert-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: saveursdegenie-service
          port: 80
