apps/clubs/saveursdegenie/website/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saveursdegenie
  namespace: saveursdegenie
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - saveursdegenie.etsmtl.ca
      secretName: saveursdegenie-cert-tls
  rules:
    - host: saveursdegenie.etsmtl.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saveursdegenie-service
                port:
                  name: http
